[project]
name = "aula20-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Jennifer Maia",email = "jen_maia@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
